--- a/package.json
+++ b/package.json
@@ -106,24 +106,25 @@
       "@vscode/test-electron": "^2.4.1"
     },
     "configuration": {
-    "properties": {
-      "jiraIntegration.baseUrl": {
-        "type": "string",
-        "default": "",
-        "description": "https://anushachitranshi.atlassian.net/"
-      },
-      "jiraIntegration.apiToken": {
-        "type": "string",
-        "default": "",
-        "description": "Your JIRA API token."
+      "properties": {
+        "jiraIntegration.baseUrl": {
+          "type": "string",
+          "default": "",
+          "description": "https://anushachitranshi.atlassian.net/"
+        },
+        "jiraIntegration.apiToken": {
+          "type": "string",
+          "default": "",
+          "description": "Your JIRA API token."
+        }
       }
     }
-  }
   },
   "dependencies": {
     "axios": "^1.7.7",
     "console": "^0.7.2",
     "node-fetch": "^3.3.2",
+    "requests": "^0.3.0",
     "vscode": "^1.1.34"
   }
 }
