--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
 				"${workspaceFolder}/out/**/*.js"
 			],
 			"preLaunchTask": "${defaultBuildTask}",
-			"sourceMaps": true
+			"sourceMaps": true,
+			"envFile":"${workspaceFolder}/.env"
 		}
 	]
 }
