--- a/package.json
+++ b/package.json
@@ -33,10 +33,6 @@
         "title": "View Outstanding Tickets"
       },
       {
-        "command": "hackathon.lintChecks",
-        "title": "Conduct a Lint Check"
-      },
-      {
         "command": "hackathon.codeExplanation",
         "title": "Explain this code"
       },
@@ -45,82 +41,74 @@
         "title": "Generate unit tests"
       }
     ],
-  "chatParticipants": [
-    {
-      "id": "chat-participant.hackathon",
-      "name": "hackchat",
-      "fullName": "HackChat",
-      "description": "Hi! I'm HackChat!",
-      "isSticky": true,
-      "commands": [
+    "chatParticipants": [
+      {
+        "id": "chat-participant.hackathon",
+        "name": "hackchat",
+        "fullName": "HackChat",
+        "description": "Hi! I'm HackChat!",
+        "isSticky": true,
+        "commands": [
+          {
+            "name": "testCommand",
+            "description": "Test command!"
+          },
+          {
+            "name": "scanForDefects",
+            "description": "Scan Code for Defects"
+          },
+          {
+            "name": "createJiraTicket",
+            "description": "Create a Jira Ticket for Defect"
+          },
+          {
+            "name": "runTestCoverageAnalysis",
+            "description": "Run Test Coverage Analysis"
+          },
+          {
+            "name": "viewOutstandingTickets",
+            "description": "View Outstanding Tickets"
+          },
+          {
+            "name": "codeExplanation",
+            "description": "Explain this code"
+          },
+          {
+            "name": "generateUnitTests",
+            "description": "Generate unit tests"
+          }
+        ]
+      }
+    ],
+    "menus": {
+      "editor/context": [
         {
-          "name": "testCommand",
-          "description": "Test command!"
+          "command": "hackathon.scanCodeForDefects",
+          "when": "editorTextFocus"
         },
         {
-          "name": "scanForDefects",
-          "description": "Scan Code for Defects"
+          "command": "hackathon.createJiraTicket",
+          "when": "editorTextFocus"
         },
         {
-          "name": "createJiraTicket",
-          "description": "Create a Jira Ticket for Defect"
+          "command": "hackathon.runTestCoverageAnalysis",
+          "when": "editorTextFocus"
         },
         {
-          "name": "runTestCoverageAnalysis",
-          "description": "Run Test Coverage Analysis"
+          "command": "hackathon.viewOutstandingTickets",
+          "when": "editorTextFocus"
         },
         {
-          "name": "viewOutstandingTickets",
-          "description": "View Outstanding Tickets"
+          "command": "hackathon.codeExplanation",
+          "when": "editorTextFocus"
         },
         {
-          "name": "lintChecks",
-          "description": "Conduct a Lint Check"
-        },
-        {
-          "name": "codeExplanation",
-          "description": "Explain this code"
-        },
-        {
-          "name": "generateUnitTests",
-          "description": "Generate unit tests"
+          "command": "hackathon.generateUnitTests",
+          "when": "editorTextFocus"
         }
       ]
     }
-  ],
-  "menus": {
-    "editor/context": [
-      {
-        "command": "hackathon.scanCodeForDefects",
-        "when": "editorTextFocus"
-      },
-      {
-        "command": "hackathon.createJiraTicket",
-        "when": "editorTextFocus"
-      },
-      {
-        "command": "hackathon.runTestCoverageAnalysis",
-        "when": "editorTextFocus"
-      },
-      {
-        "command": "hackathon.viewOutstandingTickets",
-        "when": "editorTextFocus"
-      },
-      {
-        "command": "hackathon.lintChecks",
-        "when": "editorTextFocus"
-      },
-      {
-        "command": "hackathon.codeExplanation",
-        "when": "editorTextFocus"
-      },
-      {
-        "command": "hackathon.generateUnitTests",
-        "when": "editorTextFocus"
-      }
-    ]
-  }
-},
+  },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
@@ -146,6 +134,7 @@
     "@langchain/langgraph": "^0.2.10",
     "@langchain/openai": "^0.3.4",
     "dotenv": "^16.4.5",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "parse-lcov": "^1.0.4"
   }
 }
